[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["stayer <andreyst@olovyannaya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.2"
mypy = "^1.15.0"
isort = "^6.0.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-tests = 'tests.test_utils:main'

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
line_length = 119
# Чтобы isort обрабатывал только 1 импорт за раз при вызове
multi_line_output = 1
# Можно также указать force_single_line = true, если буквально нужно 1 импорт

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'